[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hpc"
version = "0.0.1"
description = "an automation CLI tool for HPC workflow."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.9.0",
  "jinja2>=3.1.0",
  "pydantic>=2.0.0",
  "GitPython>=3.1.0",
  "tomli-w>=1.2.0",
]

[project.scripts]
hpc = "hpc.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hpc"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
    "python-semantic-release>=9.0.0",
    "ruff>=0.12.0",
]
